[gd_scene load_steps=3 format=2]

[ext_resource path="res://Calculator/Inputs/Inputs.gd" type="Script" id=1]
[ext_resource path="res://Assets/Calculator_Theme.tres" type="Theme" id=2]

[node name="Inputs" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -239, 82 )
columns = 4
script = ExtResource( 1 )

[node name="OpenParenthesis" type="Button" parent="."]
margin_right = 253.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "("

[node name="ClosedParenthesis" type="Button" parent="."]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = ")"

[node name="Modulo" type="Button" parent="."]
margin_left = 514.0
margin_right = 767.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "%"

[node name="AC" type="Button" parent="."]
margin_left = 771.0
margin_right = 1024.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "AC"

[node name="7" type="Button" parent="."]
margin_top = 120.0
margin_right = 253.0
margin_bottom = 236.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "7"

[node name="8" type="Button" parent="."]
margin_left = 257.0
margin_top = 120.0
margin_right = 510.0
margin_bottom = 236.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "8"

[node name="9" type="Button" parent="."]
margin_left = 514.0
margin_top = 120.0
margin_right = 767.0
margin_bottom = 236.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "9"

[node name="Division" type="Button" parent="."]
margin_left = 771.0
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 236.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "/"

[node name="4" type="Button" parent="."]
margin_top = 240.0
margin_right = 253.0
margin_bottom = 356.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "4"

[node name="5" type="Button" parent="."]
margin_left = 257.0
margin_top = 240.0
margin_right = 510.0
margin_bottom = 356.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "5"

[node name="6" type="Button" parent="."]
margin_left = 514.0
margin_top = 240.0
margin_right = 767.0
margin_bottom = 356.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "6"

[node name="Multiplication" type="Button" parent="."]
margin_left = 771.0
margin_top = 240.0
margin_right = 1024.0
margin_bottom = 356.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "*"

[node name="1" type="Button" parent="."]
margin_top = 360.0
margin_right = 253.0
margin_bottom = 476.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "1"

[node name="2" type="Button" parent="."]
margin_left = 257.0
margin_top = 360.0
margin_right = 510.0
margin_bottom = 476.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "2"

[node name="3" type="Button" parent="."]
margin_left = 514.0
margin_top = 360.0
margin_right = 767.0
margin_bottom = 476.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "3"

[node name="Subtraction" type="Button" parent="."]
margin_left = 771.0
margin_top = 360.0
margin_right = 1024.0
margin_bottom = 476.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "-"

[node name="0" type="Button" parent="."]
margin_top = 480.0
margin_right = 253.0
margin_bottom = 596.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "0"

[node name="Dot" type="Button" parent="."]
margin_left = 257.0
margin_top = 480.0
margin_right = 510.0
margin_bottom = 596.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "."

[node name="Equal" type="Button" parent="."]
margin_left = 514.0
margin_top = 480.0
margin_right = 767.0
margin_bottom = 596.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "="

[node name="Addition" type="Button" parent="."]
margin_left = 771.0
margin_top = 480.0
margin_right = 1024.0
margin_bottom = 596.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "+"

[connection signal="pressed" from="OpenParenthesis" to="." method="_on_OpenParenthesis_pressed"]
[connection signal="pressed" from="ClosedParenthesis" to="." method="_on_ClosedParenthesis_pressed"]
[connection signal="pressed" from="Modulo" to="." method="_on_Modulo_pressed"]
[connection signal="pressed" from="AC" to="." method="_on_AC_pressed"]
[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="Division" to="." method="_on_Division_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="Multiplication" to="." method="_on_Multiplication_pressed"]
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Subtraction" to="." method="_on_Subtraction_pressed"]
[connection signal="pressed" from="0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="Dot" to="." method="_on_Dot_pressed"]
[connection signal="pressed" from="Equal" to="." method="_on_Equal_pressed"]
[connection signal="pressed" from="Addition" to="." method="_on_Addition_pressed"]
