extends Control

signal input_made(_input)

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_0_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "0")


func _on_1_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "1")

func _on_2_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "2")


func _on_3_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "3")


func _on_4_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "4")


func _on_5_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "5")


func _on_6_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "6")


func _on_7_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "7")


func _on_8_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "8")


func _on_9_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "9")


func _on_AC_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "AC")


func _on_Dot_pressed():
	pass # Replace with function body.
	emit_signal("input_made", ".")


func _on_Addition_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "+")


func _on_Subtraction_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "-")


func _on_Multiplication_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "*")


func _on_Division_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "/")


func _on_Modulo_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "%")

func _on_OpenParenthesis_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "(")


func _on_ClosedParenthesis_pressed():
	pass # Replace with function body.
	emit_signal("input_made", ")")


func _on_Equal_pressed():
	pass # Replace with function body.
	emit_signal("input_made", "=")
